# AimLab_AutoAim

./: .gitignore  README.md
src/: AimApp.cpp  AimApp.h  CMakeLists.txt  OpenCV_Aimlab_Auxiliart.cpp
